--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,7 @@ jobs:
     displayName: 'Install tools'
   - script: pip install -r requirements.txt
     displayName: 'Install requirements'
-  - script: python src/example.py
+  - script: python hello-python.py
   - script: |
       python -m pip install flake8
       flake8 .
