--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,3 +37,8 @@ jobs:
     - name: Test with pytest
       run: |
         pytest
+    - name: Docker Build
+      run: docker build -t govindarajanv/hello-world .
+    - name: Docker Run
+      run: docker run --rm -p 8000:8000 govindarajanv/hello-world
+      timeout-minutes: 1
