--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,10 @@ jobs:
       codeCoverageTool: Cobertura
       summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
       reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
+  - script: |
+      docker build -t govindarajanv/hello-world .
+    displayName: 'Docker build'
+  - script: |
+      docker run --rm -p 8000:8000 govindarajanv/hello-world
+    displayName: 'Docker run'
+    timeoutInMinutes: 1
