--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -41,6 +41,9 @@ jobs:
       summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
       reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
   - script: |
+      docker run --rm -i hadolint/hadolint < Dockerfile
+    displayName: 'Dockerfile Lint'
+  - script: |
       docker build -t govindarajanv/hello-world .
     displayName: 'Docker build'
   - script: |
